--- a/index.html
+++ b/index.html
@@ -97,12 +97,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <h1 class="heading">My <br />&nbsp;&nbsp;<b>Works</b>.</h1>
-                    <!-- <div class="card"></div> -->
-                    <iframe height="300" style="width: 100%;" scrolling="no" title="Climbing Box" src="https://codepen.io/Hugo_Coder/embed/preview/KKWEqZQ?default-tab=result&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-                        See the Pen <a href="https://codepen.io/Hugo_Coder/pen/KKWEqZQ">
-                        Climbing Box</a> by Anantha Krishnan J (<a href="https://codepen.io/Hugo_Coder">@Hugo_Coder</a>)
-                        on <a href="https://codepen.io">CodePen</a>.
-                      </iframe>
+                    <div class="card"></div>
                 </div>
             </div>
         </div>
