--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                             <img src="./assets/images/sass-hero.png" data-depth="0.2" class="hero-image" alt="image" />
                             <img src="./assets/images/angular-hero.png" data-depth="0.6" class="hero-image"
                                 alt="image" />
+                            <img src="./assets/images/nextjs-hero.png" data-depth="0.2" class="hero-image" alt="image" />
                         </div>
                     </div>
                 </div>
