--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -77,10 +78,10 @@
                             <br /><br />
                             Outside of my work, I have a strong passion for Technology, Music, IoT and DIY
                         </p>
+                        <button class="resume-button mt-4"><a href="/assets/documents/Resume.pdf" target="_blank">Know more</a></button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-6">
-                    
                 </div>
             </div>
         </div>
@@ -89,20 +90,42 @@
         </div>
     </section>
 
-    <!-- <section class="works-section">
+    <section class="works-section">
         <img src="assets/images/work-image.png" style="right: 0; top: 0;" class="shapes" alt="cube" />
         <img src="assets/images/work-cylinder.png" style="bottom: 0; left: 6%;" class="shapes" alt="cube" />
-        <img src="assets/images/work-image.png"style="top: 10%; left: 25%; z-index: 100;"  class="shapes" alt="cube" />
-        <img src="assets/images/work-image.png"  class="shapes" alt="cube" />
+        <img src="assets/images/work-image.png"style="top: 10%; left: 25%;"  class="shapes" alt="cube" />
+        <img src="assets/images/work-image.png"  class="shapes" alt="cube" />        
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <h1 class="heading">My <br />&nbsp;&nbsp;<b>Works</b>.</h1>
-                    <div class="card"></div>
+                    <div class="container h-100 mt-4">
+                        <div class="row h-100">
+                            <div class="col-xs-12 col-sm-4">
+                                <div class="card codepen" onclick="window.open('https://codepen.io/Hugo_Coder')">
+                                    <i class="devicon-codepen-plain icon"></i>
+                                    <div class="mt-3 heading">CODEPEN</div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-4">
+                                <div class="card github" onclick="window.open('https://github.com/Ananthakrishnanj')">
+                                    <i class="devicon-github-original icon"></i>
+                                    <div class="mt-3 heading">GitHub</div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-4">
+                                <div class="card npm" onclick="window.open('https://www.npmjs.com/~ananthakrishnanj')">
+                                    <i class="devicon-npm-original-wordmark icon"></i>
+                                    <div class="mt-3 heading">NPM</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 </main>
     
