Increased lighthouse score

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                 <div class="col-sm-12 col-lg-6">
                     <div class="hero-image-container">
                         <div id="scene">
-                            <img src="./assets/images/hero-image.png" data-depth="0.1" class="hero-image" alt="image" />
-                            <img src="./assets/images/html-hero.png" data-depth="0.9" class="hero-image" alt="image" />
-                            <img src="./assets/images/css-hero.png" data-depth="0.3" class="hero-image" alt="image" />
-                            <img src="./assets/images/js-hero.png" data-depth="0.4" class="hero-image" alt="image" />
-                            <img src="./assets/images/ts-hero.png" data-depth="0.2" class="hero-image" alt="image" />
-                            <img src="./assets/images/react-hero.png" data-depth="0.7" class="hero-image" alt="image" />
-                            <img src="./assets/images/sass-hero.png" data-depth="0.2" class="hero-image" alt="image" />
-                            <img src="./assets/images/angular-hero.png" data-depth="0.6" class="hero-image"
+                            <img src="./assets/images/hero-image.webp" data-depth="0.1" class="hero-image" alt="image" />
+                            <img src="./assets/images/html-hero.webp" data-depth="0.9" class="hero-image" alt="image" />
+                            <img src="./assets/images/css-hero.webp" data-depth="0.3" class="hero-image" alt="image" />
+                            <img src="./assets/images/js-hero.webp" data-depth="0.4" class="hero-image" alt="image" />
+                            <img src="./assets/images/ts-hero.webp" data-depth="0.2" class="hero-image" alt="image" />
+                            <img src="./assets/images/react-hero.webp" data-depth="0.7" class="hero-image" alt="image" />
+                            <img src="./assets/images/sass-hero.webp" data-depth="0.2" class="hero-image" alt="image" />
+                            <img src="./assets/images/angular-hero.webp" data-depth="0.6" class="hero-image"
                                 alt="image" />
-                            <img src="./assets/images/nextjs-hero.png" data-depth="0.2" class="hero-image" alt="image" />
+                            <img src="./assets/images/nextjs-hero.webp" data-depth="0.2" class="hero-image" alt="image" />
                         </div>
                     </div>
                 </div>
